--- a/ClientManagement/Views/Shell.xaml
+++ b/ClientManagement/Views/Shell.xaml
@@ -13,6 +13,22 @@
             <Setter Property="Height" Value="30" />
             <Setter Property="Margin" Value="5" />
         </Style>
+        <Style TargetType="{x:Type Control}" x:Key="DatePickerTextBoxStyle">
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Background" Value="{x:Null}" />
+        </Style>
+        <Style TargetType="{x:Type DatePickerTextBox}" >
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <TextBox x:Name="PART_TextBox"
+                                 Text="{Binding Path=SelectedDate, StringFormat='dd-MMM-yyyy', RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" Style="{StaticResource DatePickerTextBoxStyle}" >
+                        </TextBox>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -38,7 +54,7 @@
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
-                        <GridViewColumn Width="100" DisplayMemberBinding="{Binding Name}" >
+                        <GridViewColumn Width="100" DisplayMemberBinding="{Binding Name}">
                             <GridViewColumn.Header>
                                 <GridViewColumnHeader Tag="Name" Click="ColumnHeader_Click">Name</GridViewColumnHeader>
                             </GridViewColumn.Header>
@@ -77,12 +93,11 @@
         </TextBox>
 
         <Label Grid.Row="2" Grid.Column="1" Content="Birth Date:" HorizontalContentAlignment="Right" Margin="10,0,0,10" />
-        <TextBox Name="tbBirthDate"
-                 Grid.Row="2" Grid.Column="2" IsEnabled="{Binding CanEdit}"
-                 Text="{Binding Path=SelectedClient.BirthDate,  ValidatesOnDataErrors=True, StringFormat='dd.MM.yyyy'}"
-                 Margin="0,0,20,10">
-            <TextBox.Style>
-                <Style TargetType="TextBox">
+        <DatePicker Name="dpBirthDate" Grid.Column="2" Margin="0,0,20,0" Grid.Row="2"
+                    SelectedDate="{Binding Path=SelectedClient.BirthDate,  ValidatesOnDataErrors=True, StringFormat='dd.MM.yyyy', Mode=TwoWay}"
+                    IsEnabled="{Binding CanEdit}">
+            <DatePicker.Style>
+                <Style TargetType="DatePicker">
                     <Style.Triggers>
                         <Trigger Property="Validation.HasError" Value="true">
                             <Setter Property="ToolTip"
@@ -91,8 +106,8 @@
                         </Trigger>
                     </Style.Triggers>
                 </Style>
-            </TextBox.Style>
-        </TextBox>
+            </DatePicker.Style>
+        </DatePicker>
 
         <StackPanel Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="10,0,0,0">
             <Button Command="{Binding SaveCommand}">
@@ -104,7 +119,7 @@
                                 <MultiDataTrigger.Conditions>
                                     <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbName}"
                                                Value="False" />
-                                    <Condition Binding="{Binding Path=(Validation.HasError), ElementName=tbBirthDate}"
+                                    <Condition Binding="{Binding Path=(Validation.HasError), ElementName=dpBirthDate}"
                                                Value="False" />
                                 </MultiDataTrigger.Conditions>
                                 <Setter Property="IsEnabled" Value="True" />
@@ -119,6 +134,7 @@
             <Button Content="Delete" Command="{Binding DeleteCommand}" IsEnabled="{Binding CanDelete}" />
             <Button Content="New" Command="{Binding NewCommand}" />
         </StackPanel>
+
         <!-- <Label Foreground="Red" Content="{Binding ValidationMessage}" Grid.Column="1" Grid.ColumnSpan="2" -->
         <!--        HorizontalAlignment="Left" Margin="10,45,0,61" Grid.Row="3" VerticalAlignment="Center" /> -->
     </Grid>
